syntax = "proto3";

option csharp_namespace = "ClinicServiceNamespace";

import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";
import "google/api/http.proto";

package proto;

// Сервис клиники
service ClinicService{
	//Добавление клиента
  rpc CreateClient (CreateClientRequest) returns (CreateClientResponse);
  //Обновление клиента
  rpc UpdateClient (UpdateClientRequest) returns (UpdateClientResponse);
  //Удаление клиента
  rpc DeleteClient (DeleteClientRequest) returns (DeleteClientResponse);
  //Получить клиента по Id
  rpc GetClientById (GetClientByIdRequest) returns (GetClientByIdResponse){
	  option (google.api.http) = {
		  post: "/api/clientById",
		  body: "*",
		  response_body: "client"
	  };
  }
  //Получить список клиентов
  rpc GetClients (GetClientsRequest) returns (GetClientsResponse){
	  option (google.api.http) = {
		  get: "/api/clients"
	  };
  }
}

//Параметры запроса на создание клиента
message CreateClientRequest{
	//документ
  string document = 1;
  //фамилия
  string surname = 2;
  //имя
  string firstname = 3;
  //отчество
  string patronymic = 4;
}

//Результат создания клиента
message CreateClientResponse{
  google.protobuf.Int32Value clientId = 1;
  int32 errCode = 2;
  string errMessage = 3;
}

//Параметры запроса на обновление клиента
message UpdateClientRequest{
  int32 clientId = 1;
  string document = 2;
  string surname = 3;
  string firstname = 4;
  string patronymic = 5;
}

//Результат обновление клиента
message UpdateClientResponse{
  int32 errCode = 1;
  string errMessage = 2;
}

//Параметры запроса на удаление клиента
message DeleteClientRequest{
  int32 clientId = 1;
}

//Результат удаления клиента
message DeleteClientResponse{
  int32 errCode = 1;
  string errMessage = 2;
}

//Параметры запроса на получение Id клиента
message GetClientByIdRequest{
  int32 clientId = 1;
}

//Результат получения Id клиента
message GetClientByIdResponse{
  ClientResponse client = 1;
  int32 errCode = 2;
  string errMessage = 3;
}

message ClientResponse{
  int32 clientId = 1;
  string document = 2;
  string surname = 3;
  string firstname = 4;
  string patronymic = 5;
}

//Параметры запроса на получение списка клиентов
message GetClientsRequest{
  
}

//Результат получения списка клиентов
message GetClientsResponse{
  repeated ClientResponse clients = 1;
  int32 errCode = 2;
  string errMessage = 3;
}
